Finalisation de la partie Information.

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ ul{
 .information{
     background-color:white ;
     text-align: center;
-    margin: 0 15%;
+    margin: 30px 15%;
 }
 
 .info-contener{
@@ -92,20 +92,22 @@ ul{
     gap : 10px;
     align-items: center;
     color : grey;
-    font-size: bold;
     justify-content: center;
     gap: 10%;
+    font-size: 16px;
+    margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 .item{
     justify-content: center;
-    max-width: 170px;
+    max-width: 150px;
 }
 
 .image{
     border: 3px solid #3882F6;
     height: 140px;
-    flex-basis: auto;
+    flex-basis: 1;
     border-radius: 15px;
 }
 
@@ -115,3 +117,4 @@ ul{
     border-radius: 8px;
     border: 2px solid black;
 }
+
