--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ ul{
 
 
 .hero p{
-    font-size: 16px;
+    font-size: 18px;
     color : #E5E7EB;
     margin-top: 10px;
 }
@@ -85,6 +85,7 @@ ul{
     background-color:white ;
     text-align: center;
     margin: 30px 15%;
+    font-size: 36px;
 }
 
 .info-contener{
@@ -94,19 +95,19 @@ ul{
     color : grey;
     justify-content: center;
     gap: 10%;
-    font-size: 16px;
+    font-size: 18px;
     margin-top: 40px;
     margin-bottom: 50px;
 }
 
 .item{
     justify-content: center;
-    max-width: 150px;
+    max-width: 180px;
 }
 
 .image{
     border: 3px solid #3882F6;
-    height: 140px;
+    height: 180px;
     flex-basis: 1;
     border-radius: 15px;
 }
@@ -118,3 +119,68 @@ ul{
     border: 2px solid black;
 }
 
+/* Quote */
+.quote{
+    background-color: #E5E7EB;
+    padding: 5% 0;
+    padding-left: 20%;
+    padding-right: 20%;
+    display: flex;
+    flex-direction: column;
+    gap : 15px;
+}
+
+.quote p{
+    font-size: 24px;
+    font-style: italic;
+    font-weight: light;
+    color : grey
+}
+
+.quote figcaption{
+    align-self:  flex-end;
+}
+
+/* Action sign up */
+.action{
+    background-color: #3882F6;
+    border-radius: 5px;
+    margin : 5% 15%;
+    padding : 3% 5%;
+    display: flex;
+    align-items: center;
+    gap : 10px
+}
+
+.action-text{
+    margin-right: auto;
+}
+
+.action p{
+    color : #E5E7EB;
+    font-size: 18px;
+}
+
+.action h2{
+    color : #E5E7EB;
+    font-size: 24px;
+}
+
+.action button{
+    background-color: #3882F6;
+    border-radius: 5px;
+    border : 2px solid #e5e7eb; 
+    padding : 3px 15px; 
+    color : #e5e7eb; 
+    min-width:min-content;
+    min-width: 100px;
+}
+
+/* Footer */
+footer{
+    background-color: #1f2937;
+    color : #E5E7EB;
+    font-size: 18px;
+    text-align: center;
+    padding : 15px 15%;
+}
