--- a/styles.css
+++ b/styles.css
@@ -94,22 +94,24 @@ ul{
     align-items: center;
     color : grey;
     justify-content: center;
-    gap: 10%;
+    gap: 5%;
     font-size: 18px;
     margin-top: 40px;
     margin-bottom: 50px;
+    flex-wrap: wrap;
 }
 
 .item{
     justify-content: center;
     max-width: 180px;
+    margin-top : 20px;
 }
 
 .image{
     border: 3px solid #3882F6;
     height: 180px;
-    flex-basis: 1;
     border-radius: 15px;
+    margin-bottom: 10px;
 }
 
 .info-item{
