--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ header, .hero{
     background-color: #1f2937;
     color: #F9FAF8;
     display : flex;
-    padding : 0 15%;
+    padding : 10px 15%;
 }
 
 header span{
